--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "eslint-utils": "^1.4.1",
     "gatsby": "^2.13.25",
     "gatsby-image": "^2.2.6",
-    "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-layout": "^1.1.2",
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.1.3",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-plugin-sharp": "^2.2.7",
+    "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-json": "^2.2.8",
-    "gatsby-transformer-sharp": "^2.12.1",
-    "node-sass": "^4.12.0",
+    "gatsby-transformer-sharp": "^2.2.3",
+    "node-sass": "^4.14.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -28,6 +27,7 @@
     "reactstrap": "^8.0.1"
   },
   "devDependencies": {
+    "gulp-sass": "^5.1.0",
     "netlify-cli": "^9.6.5",
     "prettier": "^1.18.2"
   },
@@ -45,7 +45,7 @@
     "netlify": "netlify"
   },
   "repository": {
-    "type": "module",
+    "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
