--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "gulp-sass": "^5.1.0",
